# debugger-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  PROGRESS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  e2e-tests.yml
blog-tutorials/: BLOG_POST_IDEAS.md  TUTORIAL_1_GETTING_STARTED.md  TUTORIAL_2_DATA_STRUCTURES.md  TUTORIAL_3_RECURSIVE_ALGORITHMS.md  TUTORIAL_4_ADVANCED_FEATURES.md  example1_fibonacci.py  example1_fibonacci.rs  example2_linked_list.py  example3_json_parser.py  example3_tree_traversal.py  example4_server_simulation.py
docker/: README.md
docker/base/: Dockerfile
docker/debugpy/: Dockerfile
docker/delve/: Dockerfile
docker/gdb/: Dockerfile
docker/js-debug/: Dockerfile
docker/lldb/: Dockerfile
docs/: DEVELOPMENT.md  README.md  plan-js-debug.md  prompt.md
docs/plan/: architecture.md  cuda-gdb.md  dap-reference.md  e2e-tests-notes.md  e2e-tests.md  implementation.md  js-debug-support.md  setup-command.md
scripts/: run-e2e-tests.sh  run-local-e2e.sh
src/: commands.rs  lib.rs  main.rs
src/cli/: mod.rs  spawn.rs
src/common/: config.rs  error.rs  logging.rs  mod.rs  paths.rs
src/daemon/: actor.rs  handler.rs  mod.rs  server.rs  session.rs
src/dap/: client.rs  codec.rs  mod.rs  types.rs
src/ipc/: client.rs  mod.rs  protocol.rs  transport.rs
src/setup/: detector.rs  installer.rs  mod.rs  registry.rs  verifier.rs
src/setup/adapters/: CLAUDE.md  README.md  codelldb.rs  cuda_gdb.rs  debugpy.rs  delve.rs  gdb.rs  gdb_common.rs  js_debug.rs  lldb.rs  mod.rs
src/testing/: config.rs  mod.rs  runner.rs
tests/: TESTING.md  integration.rs
tests/complex_app/: main.py  scenarios.py
tests/e2e/: complex_test.py  hello_world.c  hello_world.go  hello_world.js  hello_world.py  hello_world.rs  hello_world.ts  run_tests.py  test_c  test_rs
tests/fixtures/: README.md  attach_target.c  cuda_test.cu  package-lock.json  simple.c  simple.go  simple.js  simple.py  simple.rs  simple.ts  test_simple_go  threaded.c  threaded.go  tsconfig.json
tests/fixtures/multi_source/: main.c  utils.c  utils.h
tests/scenarios/: README.md  attach_process_c.yml  breakpoint_management_c.yml  commands_c.yml  commands_go.yml  commands_python.yml  commands_rust.yml  complex_go.yml  complex_verification.yml  conditional_breakpoint_c.yml  conditional_breakpoint_go.yml  conditional_breakpoint_js.yml  conditional_breakpoint_py.yml  error_attach_invalid_pid_c.yml  error_bad_expression_c.yml  error_invalid_breakpoint_c.yml  error_undefined_variable_c.yml  expression_eval_js.yml  hello_world_c.yml  hello_world_go.yml  hello_world_js.yml  hello_world_python.yml  hello_world_rust.yml  hello_world_ts.yml  hitcount_breakpoint_c.yml  hitcount_breakpoint_go.yml  multi_source_c.yml  output_capture_c.yml  output_capture_go.yml  output_capture_js.yml  output_capture_py.yml  pause_resume_c.yml  program_restart_c.yml  program_restart_go.yml  stack_navigation_c.yml  stack_navigation_go.yml  stack_navigation_js.yml  stack_navigation_py.yml  stepping_js.yml  thread_list_c.yml  (+1 more)
