[package]
name = "debugger"
version = "0.1.0"
edition = "2021"
description = "LLM-friendly debugger CLI using the Debug Adapter Protocol"
license = "MIT"

[[bin]]
name = "debugger"
path = "src/main.rs"

[lib]
name = "debugger"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Cross-platform IPC (Unix sockets / Windows named pipes)
interprocess = { version = "2", features = ["tokio"] }

# Unix-specific functionality
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Utility crates
which = "7"
directories = "5"
toml = "0.8"

# Setup command - downloading and installation
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
indicatif = "0.17"
semver = "1.0"
tempfile = "3.14"
os_info = "3.9"
async-trait = "0.1"
futures-util = "0.3"

# E2E testing
serde_yaml = "0.9"
colored = "2"

[profile.release]
strip = true
lto = true
